fix: add new styles to align properly items

--- a/react-app/src/components/layouts/navbar-section/styles.scss
+++ b/react-app/src/components/layouts/navbar-section/styles.scss
@@ -19,10 +19,9 @@
     // height: 64px;
   }
 
-  &__left-side {
+  &__right-side {
     display: flex;
-    align-items: center;
-    // height: 64px;
+    margin-left: auto;
   }
 
   &__logo-link {
